bundle/tests/scorecard/kuttl/t3-ingress/00-cr-install.yaml
apiVersion: mailhog.operators.patrick.mx/v1alpha1
kind: MailhogInstance
metadata:
  name: t3-ingress
  labels:
    app: mailhog-kuttl
spec:
  image: 'mailhog/mailhog:latest'
  replicas: 1
  settings:
    storage: memory
  webTrafficInlet: ingress
