bundle/tests/scorecard/kuttl/t3-ingress/00-ingress-assert.yaml
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: t3-ingress
spec:
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: t3-ingress
                port:
                  name: http
status:
  loadBalancer: {}
